<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/white"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/wel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <include
            android:id="@+id/welcome"
            layout="@layout/toolbar"/>

        <ImageView
            android:layout_below="@+id/welcome"
            android:id="@+id/welc"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="177dp"
            app:srcCompat="@drawable/welcome"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/rejoingnez"
            android:layout_below="@+id/welc"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/rejoignez"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_below="@+id/rejoingnez"
            android:id="@+id/aide"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/aide"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/grey"
            />

        <Button
            android:layout_below="@+id/aide"
            android:id="@+id/w_next"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="15dp"
            android:hint="@string/suivant"
            android:padding="4dp"
            android:background="@layout/dark_green_button"
            android:textColorHint="@color/white" />
        <TextView
            android:id="@+id/compteExistant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compteExistant"
            android:layout_alignParentBottom="true"
            android:textColor="@color/light_pink"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            android:layout_centerHorizontal="true"
            tools:ignore="OnClick"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

