<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingTop="5dip"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Email"
    android:background="@color/white"
    >
    <include
        android:id="@+id/e_mail"
        layout="@layout/toolbar"/>
    <TextView
        android:layout_below="@+id/e_mail"
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/evae"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/error"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textColor="@android:color/holo_red_light"
        android:drawableEnd="@drawable/ic_baseline_error_24"
        app:endIconMode="custom"
        android:layout_below="@+id/text"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/EditTextThemeOverlaEmail"
        app:endIconDrawable="@drawable/clear_icon"
        app:endIconMode="clear_text"
        app:endIconTintMode="multiply"
        android:layout_below="@id/error">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ae"
            android:fontFamily="sans-serif"
            android:id="@+id/edit_email"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/e_next"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:hint="@string/suivant"
        android:padding="4dp"
        android:background="@layout/light_blue_button"
        android:textColorHint="@color/white"
        android:layout_below="@id/email"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/test"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/e_next"/>

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phoneinscr"
        android:layout_alignParentBottom="true"
        android:textColor="@color/light_blue"
        android:textStyle="bold"
        android:onClick="onClick"
        android:clickable="true"
        android:layout_centerHorizontal="true"
        tools:ignore="OnClick"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
    </TextView>
</RelativeLayout>