<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">
    <!-- TextView for displaying question-->
    <include
        android:id="@+id/gender"
        layout="@layout/toolbar"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/qevg"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/error"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textColor="@android:color/holo_red_light"
        android:drawableEnd="@drawable/ic_baseline_error_24"
        app:endIconMode="custom"
        />
    <!-- RadioGroup for grouping of RadioButton-->
    <RadioGroup
        android:id="@+id/genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/femme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/femme"
            android:textColor="#000" />

        <RadioButton
            android:id="@+id/homme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_below="@+id/femme"
            android:text="@string/homme"
            android:textColor="#000" />
    </RadioGroup>

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:hint="@string/suivant"
        android:padding="4dp"
        android:background="@layout/yellow_button"
        android:textColorHint="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/test"/>
</LinearLayout>


    <!--
    <?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:text="@string/qevg"
    android:layout_marginTop="20dp"
    android:layout_marginRight="40dp"
    android:layout_marginLeft="40dp"
    android:textAlignment="center"
    android:textSize="18sp"
    android:textStyle="bold"
    android:textColor="@color/black"
        />
    <RadioGroup
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="horizontal"
    android:weightSum="2">
    <RadioButton
        android:id="@+id/yes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_weight="1"
        android:text="@string/femme"
        android:textColor="#000" />
    <RadioButton
        android:id="@+id/no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_weight="1"
        android:text="@string/homme"
        android:textColor="#000" />
    </RadioGroup>
        </LinearLayout>
    -->



    <!--<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:context=".Nom">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/qevg"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton android:id="@+id/radio_pirates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/femme"
                android:onClick="onRadioButtonClicked"
                tools:ignore="OnClick" />
            <RadioButton android:id="@+id/radio_ninjas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homme"
                android:onClick="onRadioButtonClicked"
                tools:ignore="OnClick" />
        </RadioGroup>
        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:hint="@string/suivant"
            android:padding="4dp"
            android:background="@layout/mybutton"
            android:textColorHint="@color/white" />
    </LinearLayout>
    -->