<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingTop="5dip"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Num_Tel"
    android:background="@color/white"
    >

    <include
        android:id="@+id/numtel"
        layout="@layout/toolbar"/>

    <TextView
        android:layout_below="@id/numtel"
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/evndtm"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_below="@id/text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/error"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textColor="@android:color/holo_red_light"
        android:drawableEnd="@drawable/ic_baseline_error_24"
        app:endIconMode="custom"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tel"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/EditTextThemeOverlaNumTel"
        android:layout_below="@id/error"
        app:endIconDrawable="@drawable/clear_icon"
        app:endIconMode="clear_text"
        app:endIconTintMode="multiply"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nm"
            android:fontFamily="sans-serif"
            android:inputType="phone"
            android:id="@+id/edit_tel"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/p_next"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:hint="@string/suivant"
        android:padding="4dp"
        android:background="@layout/pink_button"
        android:textColorHint="@color/white"
        android:layout_below="@id/tel"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mailinscr"
        android:layout_alignParentBottom="true"
        android:textColor="@color/pink"
        android:textStyle="bold"
        android:onClick="onClick"
        android:clickable="true"
        android:layout_centerHorizontal="true"
        tools:ignore="OnClick"
        android:focusable="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        />
</RelativeLayout>
    <!--
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:layout_gravity="bottom">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/nm"
            android:layout_centerInParent="true"
            android:layout_gravity="bottom" android:layout_alignParentBottom="true"/>
    </RelativeLayout>-->

    <!--<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:context=".Num_Tel">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/evndtm"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tel"
            app:boxBackgroundColor="@android:color/transparent"
            android:background="@android:color/transparent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nm"
                android:fontFamily="sans-serif"
                android:inputType="phone"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/n_next"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:hint="@string/suivant"
            android:padding="4dp"
            android:background="@layout/mybutton"
            android:textColorHint="@color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/evndtm"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            />
    </LinearLayout>
        -->